--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
 
   flutter_native_splash: ^2.4.7
   dynamic_color: ^1.6.9
+  flutter_svg: ^2.2.3
   file_picker: ^10.3.7
   vibration: ^3.1.4
   audioplayers: ^6.4.1
